--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>To-Do List</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <div class="date" id="date"></div>
+      <div class="day" id="day"></div>
+    </div>
 
+    <!-- Progress bar -->
+    <div class="progress-bar-container">
+      <div class="progress-label">Progress</div>
+      <div class="progress-bar">
+        <div class="progress-fill" id="progress-fill" style="width: 0%"></div>
+      </div>
+      <div class="progress-percent" id="progress-percent">0%</div>
+    </div>
+
+    <ul id="task-list" class="task-list"></ul>
+
+    <button class="add-btn" onclick="promptNewTask()">+</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
