--- a/E-Learning-application/index.html
+++ b/E-Learning-application/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>E-Learning Platform</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gradient-to-br from-gray-900 to-black text-white min-h-screen font-sans flex flex-col">
 
+  <!-- Header -->
+  <header class="bg-indigo-800 p-6 shadow-lg">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-4xl font-bold tracking-wide">🎓 TechNest Learn</h1>
+    </div>
+  </header>
+
+  <!-- Main -->
+  <main class="container mx-auto p-6 flex-grow">
+    <h2 class="text-3xl font-semibold mb-8 text-indigo-400">📘 Front-end Courses</h2>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
+      <!-- HTML -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-md hover:shadow-xl transition hover:-translate-y-1">
+        <h3 class="text-xl font-bold mb-2">HTML Basics</h3>
+        <p class="text-sm text-gray-300 mb-4">Learn the structure of web pages with Apna College.</p>
+        <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4" target="_blank"
+           class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg">Start Course</a>
+      </div>
+
+      <!-- CSS -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-md hover:shadow-xl transition hover:-translate-y-1">
+        <h3 class="text-xl font-bold mb-2">CSS Basics</h3>
+        <p class="text-sm text-gray-300 mb-4">Style web pages using this one-shot Apna College video.</p>
+        <a href="https://www.youtube.com/watch?v=ESnrn1kAD4E" target="_blank"
+           class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg">Start Course</a>
+      </div>
+
+      <!-- JavaScript -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-md hover:shadow-xl transition hover:-translate-y-1">
+        <h3 class="text-xl font-bold mb-2">JavaScript Basics</h3>
+        <p class="text-sm text-gray-300 mb-4">Understand JS fundamentals with Apna College’s full course.</p>
+        <a href="https://www.youtube.com/watch?v=ZzaPdXTrSb8" target="_blank"
+           class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg">Start Course</a>
+      </div>
+
+      <!-- TailwindCSS -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-md hover:shadow-xl transition hover:-translate-y-1">
+        <h3 class="text-xl font-bold mb-2">TailwindCSS Basics</h3>
+        <p class="text-sm text-gray-300 mb-4">Master utility-first CSS to quickly design responsive and modern web layouts.</p>
+        <a href="https://youtu.be/pYaamz6AyvU?si=WgjJkflHaGPAG0KC" target="_blank" 
+           class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg">Start Course</a>
+      </div>
+
+      <!-- React -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-md hover:shadow-xl transition hover:-translate-y-1">
+        <h3 class="text-xl font-bold mb-2">React Basics</h3>
+        <p class="text-sm text-gray-300 mb-4">Learn how to build dynamic user interfaces using components, state management, and JSX.</p>
+        <a href="https://youtu.be/RVFAyFWO4go" target="_blank" 
+           class="inline-block bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg">Start Course</a>
+      </div>
+
+    </div>
+    <p class="mt-12 text-xl">Many more coming soon..........</p>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-center text-sm py-4 text-gray-400">
+    © 2025 TechNest Learn. All rights reserved.
+  </footer>
+
+</body>
+</html>
